# coreutils

./: Cargo.toml  README.md  TODO.md  build.toml  module.toml  run
cat/: Cargo.toml  build.toml
cat/src/: main.rs
clear/: Cargo.toml  build.toml
clear/src/: main.rs
coreutils-macro/: Cargo.toml
coreutils-macro/src/: lib.rs
cp/: Cargo.toml  build.toml
cp/src/: main.rs
echo/: Cargo.toml  build.toml
echo/src/: main.rs
ln/: Cargo.toml  build.toml
ln/src/: main.rs
ls/: Cargo.toml  build.toml
ls/src/: formatting.rs  main.rs
mkdir/: Cargo.toml  build.toml
mkdir/src/: main.rs
mount/: Cargo.toml  build.toml
mount/src/: main.rs
mv/: Cargo.toml  build.toml
mv/src/: main.rs
poweroff/: Cargo.toml  build.toml
poweroff/src/: main.rs
printenv/: Cargo.toml  build.toml
printenv/src/: main.rs
reboot/: Cargo.toml  build.toml
reboot/src/: main.rs
rm/: Cargo.toml  build.toml
rm/src/: main.rs
sleep/: Cargo.toml  build.toml
sleep/src/: main.rs
src/: cat.rs  clear.rs  cp.rs  echo.rs  main.rs  mkdir.rs  mount.rs  mv.rs  printenv.rs  rm.rs  sleep.rs  touch.rs
src/coreutils/: cat.rs  cp.rs  echo.rs  ln.rs  mod.rs  mount.rs  mv.rs  poweroff.rs  reboot.rs  rm.rs  sleep.rs
src/coreutils/ls/: formatting.rs  ls.rs  mod.rs
src/ls/: formatting.rs  mod.rs
touch/: Cargo.toml  build.toml
touch/src/: main.rs
user/: Cargo.toml  build.toml
user/src/: main.rs  uid.rs
